syntax = "proto3";
package backend;

option go_package = "backend";

import "github.com/baudtime/baudtime/msg/pb/pb.proto";

enum HandshakeStatus {
    FailedToSync = 0;
    NoLongerMySlave = 1;
    NewSlave = 2;
    AlreadyMySlave = 3;
}

message SlaveOfCommand {
    string masterAddr = 1;
}

message SyncHandshake {
    string slaveAddr = 1;
    sint64 blocksMinT = 2;
    bool slaveOfNoOne = 3;
}

message SyncHandshakeAck {
    HandshakeStatus status = 1;
    string relationID = 2;
    string message = 3;
}

message BlockSyncOffset {
    string ulid = 1;
    sint64 minT = 2;
    sint64 maxT = 3;
    string path = 4;
    sint64 Offset = 5;
}

message SyncHeartbeat {
    string masterAddr = 1;
    string slaveAddr = 2;
    string relationID = 3;
    BlockSyncOffset blkSyncOffset = 4;
}

message SyncHeartbeatAck {
    pb.StatusCode status = 1;
    string message = 2;
    BlockSyncOffset blkSyncOffset = 3;
    bytes data = 4;
}
